src/test/deca/codegen/invalid/sansObjets/00divBy0.deca
// Description:
//    Programme minimaliste testant le refus de la division par 0
//
// Resultats:
//    
//
// Historique:
//    cree le @DATE@


{
    int x = 5, y;
    y = 20 / (5 - x);
}